--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -24,13 +24,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install feedparser pandas requests
+        pip install -r requirements.txt
 
     - name: Run arXiv reporter
       env:
         GMAIL_SENDER: ${{ secrets.GMAIL_SENDER }}
         GMAIL_RECEIVER: ${{ secrets.GMAIL_RECEIVER }}
         GMAIL_APP_PASSWORD: ${{ secrets.GMAIL_APP_PASSWORD }}
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
       run: |
         python process_papers_and_email.py
